<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demo_intent1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id_apps">Apps</string>
    <string name="id_setting">Setting</string>
    <string name="id_specific">Specific App</string>
    <string name="id_search">Search</string>
    <string name="id_developer">Developer</string>
    <string name="id_vibrate">Vibrate</string>
    <string name="wifi">wi-fi</string>
    <string name="bluetooth">BlueTooth</string>
    <string name="AddAc">Add Account</string>
    <string name="dis">Discoverable</string>
    <string name="divname">Device Name</string>




</resources>
