<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="208dp"
        android:layout_height="169dp"
        android:layout_marginTop="100dp"
        android:layout_weight="0.43"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="@dimen/match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wifi"
            android:id="@+id/id_wifi"
            android:paddingBottom="20dp"
            android:layout_marginBottom="60dp"/>

        <Button
            android:layout_width="@dimen/match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth"
            android:id="@+id/id_blue"
            android:paddingBottom="20dp"
            android:layout_marginBottom="60dp"/>

        <Button
            android:layout_width="@dimen/match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AddAc"
            android:id="@+id/AddAc" />
        </LinearLayout>

</LinearLayout>